# CrewAI_Ollama_City

./: .gitignore  Dockerfile  pyproject.toml  startup.sh
citycrisisanalyser/: .gitignore  ihm-test.py  main_api.py  package-lock.json  package.json  pyproject.toml  repoort.md
citycrisisanalyser/Back/citycrisisanalyser/: main.py
citycrisisanalyser/Back/citycrisisanalyser/config/: tasks.yaml
citycrisisanalyser/Back/src/citycrisisanalyser/: crew.py  main.py
citycrisisanalyser/Flask_app/: app.py
citycrisisanalyser/Flask_app/static/css/: styles.css
citycrisisanalyser/Flask_app/static/js/: script.js
citycrisisanalyser/Flask_app/templates/: index.html
citycrisisanalyser/Front/: app.py  package-lock.json  package.json  tailwind.config.js
citycrisisanalyser/Front/src/: App.tsx
citycrisisanalyser/Front/src/components/: AgentCircle.tsx  EportPDFButton.tsx  LeftPanel.tsx  MiddlePanel.tsx  Navbar.tsx  RightPanel.tsx
citycrisisanalyser/Front/src/pages/: Home.tsx
citycrisisanalyser/Front/src/services/: helpers.ts
citycrisisanalyser/Front/src/styles/: MiddlePanel.css
citycrisisanalyser/Front/static/css/: styles.css
citycrisisanalyser/Front/static/js/: script.js
citycrisisanalyser/Front/templates/: index.html
citycrisisanalyser/api/: controller.py
citycrisisanalyser/back/: .env  README.md  main_api.py  pyproject.toml  report.md  requirements.txt
citycrisisanalyser/back/api/: controller.py  schema.py
citycrisisanalyser/back/db/: chroma.sqlite3
citycrisisanalyser/back/src/citycrisisanalyser/: crew.py  main.py
citycrisisanalyser/front/: package-lock.json  package.json
citycrisisanalyser/front/public/: index.html
citycrisisanalyser/front/src/: App.tsx
citycrisisanalyser/front/src/components/: AgentCircle.tsx  EportPDFButton.tsx  LeftPanel.tsx  MiddlePanel.tsx  RightPanel.tsx
citycrisisanalyser/front/src/pages/: Home.tsx
citycrisisanalyser/front/src/services/: api.ts
citycrisisanalyser/fronte/: package-lock.json
citycrisisanalyser/fronte/src/: App.tsx
citycrisisanalyser/fronte/src/components/: Accordion.tsx  IntroSection.tsx  (+2 more)
citycrisisanalyser/src/citycrisisanalyser/: crew.py  main.py
(+10 files in other folders)
