[project]
name = "crewai-ollama-city"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.140.0",
]

[tool.poetry]
name = "citycrisisanalyser-back"
version = "0.1.0"
description = "Backend du projet City Crisis Analyser"
authors = ["NantesAIE <contact@nantesaie.fr>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
crewai_tools = "*"


[tool.poetry.dev-dependencies]
pytest = "^7.0"