[project]
name = "citycrisisanalyser"
version = "0.1.0"
description = "CityCrisisAnalyser using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13.5"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0"
]

[project.scripts]
citycrisisanalyser = "citycrisisanalyser.main:run"
run_crew = "citycrisisanalyser.main:run"
train = "citycrisisanalyser.main:train"
replay = "citycrisisanalyser.main:replay"
test = "citycrisisanalyser.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
