[tool.poetry]
name = "citycrisisanalyser-back"
version = "0.1.0"
description = "Backend du projet City Crisis Analyser"
authors = ["NantesAIE <contact@nantesaie.fr>"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[project]
name = "citycrisisanalyser"
version = "0.1.0"
description = "CityCrisisAnalyser using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0"
]

[project.scripts]
citycrisisanalyser = "citycrisisanalyser.main:run"
run_crew = "citycrisisanalyser.main:run"
train = "citycrisisanalyser.main:train"
replay = "citycrisisanalyser.main:replay"
test = "citycrisisanalyser.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"